Fix navigation bar on mobile

--- a/src/app/components/navigation-toolbar/navigation-toolbar.component.scss
+++ b/src/app/components/navigation-toolbar/navigation-toolbar.component.scss
@@ -14,4 +14,13 @@
     margin-left: 16px;
     margin-right: 8px;
   }
+
+  @media screen and (max-width: 768px){
+    padding: 0 8px;
+
+    .logo{
+      height: 14px;
+      margin-left: 0;
+    }
+  }
 }
