--- a/src/styles.scss
+++ b/src/styles.scss
@@ -182,6 +182,10 @@ p.note{
     display: none !important;
   }
 
+  .btn{
+    font-size: .8rem;
+  }
+
   h1{
     font-size: 1.4rem;
   }
